# tauri_react_vite_ts_script_antd_i18next_tokio_styled_v2

./: .eslintrc.cjs  .gitattributes  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: biome-lint.yml  main-lint-test-deploy.yml
change-name-owner-src/: package-lock.json  package.json
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/capabilities/plugins/updater/: plugin-updater.json
src-tauri/capabilities/plugins/window-state/: window-state.json
src-tauri/src/: config.rs  lib.rs  main.rs
src/components/app/: WindowTitle.tsx
src/components/popups/: AboutPopup.tsx  PreferencesPopup.tsx
src/components/wrappers/: TooltipObjectButton.tsx
src/context/: AntdThemeContext.tsx
src/hooks/: UseTauriUpdater.tsx  UseWindowStateListener.tsx
src/localization/: Localization.ts
src/localization/en/: ui.json
src/localization/fi/: ui.json
src/localization/rust_i18n_transform/: index.ts
src/menu/: AppMenu.tsx  AppMenuToolbar.tsx  AppToolbar.tsx  MenuItems.tsx  ToolbarItems.tsx
src/utilities/app/: Notify.ts  Settings.ts
