[package]
name = "tauri_template"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "=2.0.0-beta.25", features = [] }
tauri-plugin-shell = "2.0.0-beta.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.1", features = ["full"] }
tauri-plugin-process = "2.0.0-beta.8"
tauri-plugin-updater = "2.0.0-beta.11"
serde_derive = "1.0.204"
tauri-plugin-os = "2.0.0-beta.8"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state = "=2.0.0-beta.11"
